<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_corner_all"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/tv_title_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Nhập thông tin video" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_title_video"
        style="@style/LoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:text="huuhai@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_imageurl_video"
        style="@style/LoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/imageurl"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:text="huuhai@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_id_video"
        style="@style/LoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/videoid"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:text="huuhai@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spnMonHocUploadVideo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel_video"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/bg_button_square_cyan"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_confirm_video"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@drawable/bg_button_square_yellow"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>