<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large">

            <TextView
                android:id="@+id/tv_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:minHeight="40dp"
                android:text="@string/registration"
                android:textColor="@color/black_selector"
                android:textSize="15dp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/layout_action"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button_circle_blue">

                <ImageButton
                    android:id="@+id/bt_login"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_button_circle_blue"
                    android:contentDescription="@string/login"
                    android:src="@drawable/ic_arrow_forward" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>