<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_subject_id"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:endIconDrawable="@drawable/ic_more_horiz"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_subject_id"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                tools:text="101" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_exam_id"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_subject_id"
            android:layout_marginTop="@dimen/margin_large">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_exam_id"
                android:inputType="number"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                tools:text="112" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_exam_magv"
            style="@style/LoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_exam_id"
            android:layout_marginTop="@dimen/margin_large">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Mã giáo viên"
                android:inputType="text"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/black"
                tools:text="111" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_exam_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layout_action_next"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_toStartOf="@+id/layout_action_next"
            android:textColor="@color/red"
            tools:text="Không tìm thấy đề thi" />

        <RelativeLayout
            android:id="@+id/layout_action_next"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@id/input_exam_magv"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_button_circle_blue">

            <ImageButton
                android:id="@+id/bt_next"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_button_circle_blue"
                android:contentDescription="@string/login"
                android:src="@drawable/ic_arrow_forward" />

            <ProgressBar
                android:id="@+id/progressbar_next"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <include layout="@layout/merge_layout_status" />
</RelativeLayout>